--- a/project 1 - weather app/index.html
+++ b/project 1 - weather app/index.html
@@ -11,8 +11,8 @@
         <h1>Weather App</h1>
         <div class="card">
             <input type="text">
-            <button id="get-weather-info">Get Weather</button>
         </div>
+        <button id="get-weather-info">Get Weather!</button>
         <div class="weather-info"></div>
     </div>
     <script src="script.js"></script>
